--- a/src/main.scss
+++ b/src/main.scss
@@ -106,6 +106,8 @@ h4,
 h5 {
   font-family: $heading-font-family;
   font-weight: $heading-font-weight;
+  text-transform: lowercase;
+  margin-bottom: 0;
   // letter-spacing: -0.05rem;
 }
 a,
@@ -500,11 +502,11 @@ header,
 }
 
 .saltire-badge {
-  margin-bottom: $unit/2;
+  margin-bottom: $unit;
 }
 .saltire-badge.disabled {
   filter: grayscale(1);
-  opacity: 0.5;
+  opacity: 0.7;
 }
 
 .page .content-break {
