--- a/configuration/templates/volunteering/query-hours.hbs
+++ b/configuration/templates/volunteering/query-hours.hbs
@@ -1,53 +1,62 @@
 <div class="tasks-empty empty {{#if @root.data.tasksInfoUnverified.[0]}}hide{{/if}}">
-  <div class="empty-icon text-success">
-    <span class="fal fa-user-check fa-3x"></span>
-  </div>
-  <p class="empty-title h5">Volunteering verification</p>
-  <p class="empty-subtitle">
-    Volunteering verification successful. You can now close this page.
-  </p>
+  {{> verify_pass task_ids=@root.request.params.query.t type='query'}}
 </div>
 
 <div class="tasks-not-empty empty {{#unless @root.data.tasksInfoUnverified.[0]}}hide{{/unless}}">
   <div class="empty-icon">
     <span class="fal fa-user-clock fa-3x"></span>
   </div>
-  <p class="empty-title h5">Volunteering verification</p>
+  <p class="empty-title h4">Volunteering verification</p>
   <p class="empty-subtitle">
-    Verifying volunteering for {{@root.data.accountInfo.first_name}} {{@root.data.accountInfo.last_name}} {{#if @root.data.accountInfo.school_college_name}}from {{@root.data.accountInfo.school_college_name}}{{/if}}
+    Verification of hours volunteered by {{@root.data.accountInfo.first_name}} {{@root.data.accountInfo.last_name}}{{#if @root.data.accountInfo.school_college_name}} from {{@root.data.accountInfo.school_college_name}}{{/if}}.<br />
+    You may use this page to verify hours or make alterations if necessary.
   </p>
-  {{!-- <p class="empty-subtitle">
-    If the volunteering details below are incorrect, please adjust the number of hours and choose Verify.<br />
-    If the work did not occur, please choose Remove.
-  </p> --}}
   {{#each (filter @root.data.tasksInfoUnverified "task_id" "valueIn" (split @root.request.params.query.t ",")) ~}}
-
     {{#compare unverified_hours_list.length ">=" 1 ~}}
-      <div class="task-element">
-      <p class="empty-subtitle">
-        Organisation: {{organisation_name}}<br />
-        {{#if task_description}}{{task_description}}<br />{{/if}}
-        Volunteering manager: {{volunter_manager_first_name}} {{volunteer_manager_last_name}} ({{volunteer_manager_title}})<br />
-      </p>
-
+    <div class="task-element">
       <div class="empty-action">
-
         <div class="columns">
-          <div class="column col-2">
-            <strong>When</strong>
+          <div class="column col-2 text-left">
+            <strong>Organisation</strong>
           </div>
-          <div class="column col-1">
+          <div class="column col-2 text-left">
+            <strong>Volunteer manager</strong>
+          </div>
+          {{#if task_description ~}}
+          <div class="column col-xs-auto text-left">
+            <strong>Volunteering description</strong>
+          </div>
+          {{/if ~}}
+        </div>
+        <div class="columns b-margin">
+          <div class="column col-2 text-left">
+            {{{organisation_name}}}
+          </div>
+          <div class="column col-2 text-left">
+            {{volunter_manager_first_name}} {{volunteer_manager_last_name}} ({{volunteer_manager_title}})
+          </div>
+          {{#if task_description ~}}
+          <div class="column col-xs-auto text-left">
+            {{{task_description}}}
+          </div>
+          {{/if ~}}
+        </div>
+        <div class="columns">
+          <div class="column col-1 text-left">
             <strong>Hours</strong>
           </div>
-          <div class="column col-xs-auto">
-            <strong>Notes</strong>
+          <div class="column col-1"></div>
+          <div class="column col-2 text-left">
+            <strong>Logged on</strong>
           </div>
-          <div class="column col-{{#if claim_code}}4{{else}}2{{/if}}">
+          <div class="column col-xs-auto text-left">
+            <strong>Reason for change of hours logged</strong>
+          </div>
+          <div class="column col-{{#if claim_code}}4{{else}}2{{/if}} text-left">
           </div>
         </div>
         {{#each this.hours_list ~}}
           {{#unless verified ~}}
-
             <form id="{{hours_id}}" method="POST" action="/admin-update-individual-hours?c={{@root.request.params.query.c}}&user_id={{@root.request.params.query.user_id}}" class="inline-hours-form" data-component="TasksTrigger" data-success-hide="true" data-next-task="empty-collapse" data-TasksTrigger="ajax-form-handler">
               <input type="hidden" name="task_id" value="{{task_id}}">
               <input type="hidden" name="verified" value="true">
@@ -55,27 +64,28 @@
               <input type="hidden" name="hours_id" value="{{hours_id}}">
               <input type="hidden" name="user_id" value="{{@root.request.params.query.user_id}}">
               <div class="columns">
-                <div class="column col-2">
-                  <span class="inline-form-text">{{momentFormat (moment createdDate "YYYY-MM-DD") "MMMM Do YYYY"}}</span>
-                </div>
-                <div class="column col-1">
+                <div class="column col-1 text-left">
                   <div class="form-group b-margin">
                     <input class="form-input inline-edit" name="hours" min="0.1" value="{{hours}}">
                   </div>
                 </div>
-                <div class="column col-xs-auto">
+                <div class="column col-1"></div>
+                <div class="column col-2 text-left">
+                  {{momentFormat (moment createdDate "YYYY-MM-DD") "Do MMMM YYYY"}}
+                </div>
+                <div class="column col-xs-auto text-left">
                   <div class="form-group b-margin">
                     <input class="form-input inline-edit" name="notes" value="{{notes}}">
                   </div>
                 </div>
-                <div class="column col-1">
+                <div class="column col-1 text-left">
                   <button type="submit" class="btn btn-block btn-success inline-update-button">Verify</button>
                 </div>
-                <div class="column col-1">
+                <div class="column col-1 text-left">
                   <a href="/admin-delete-hours?hours_id={{hours_id}}&c={{@root.request.params.query.c}}&user_id={{@root.request.params.query.user_id}}" class="btn btn-block inline-delete-button" data-component="TasksTrigger" data-success-hide="true" data-TasksTrigger="ajax-delete-handler" data-next-task="empty-collapse">Remove</a>
                 </div>
                 {{#if claim_code ~}}
-                  <div class="column col-2">
+                  <div class="column col-2 text-left">
                     <code class="claim-code">{{substr claim_code 0 10}}</code>
                   </div>
                 {{/if ~}}
@@ -83,30 +93,10 @@
             </form>
           {{/unless ~}}
         {{/each ~}}
-        <div class="columns">
-          <div class="column col-2">
-            <strong>Testimonial</strong>
-          </div>
-        </div>
-        <form action="/update-task-testimonial/{{task_id}}?c={{@root.request.params.query.c}}&user_id={{@root.request.params.query.user_id}}" class="inline-hours-form" data-component="TasksTrigger" data-form-element=">" data-success-hide="true" data-next-task="empty-collapse" data-TasksTrigger="ajax-form-handler">
-
-          <div class="form-group">
-
-            <div class="columns">
-              <div class="col-8">
-                <textarea rows="3"  placeholder="Let people know what {{@root.data.accountInfo.first_name}} has achieved with your organisation" cols="40" id="testimonial" name="testimonial" class="inline-form-input inline-edit" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.testimonial}}>{{testimonial}}</textarea>
-              </div>
-              <div class="col-1"></div>
-              <div class="col-3">
-                <button type="submit" class="btn btn-success btn-block inline-update-button b-margin" >Save</button>
-              </div>
-            </div>
-
-          </div>
-        </form>
       </div>
     {{/compare ~}}
   {{/each ~}}
+  {{> verify_testimonials task_ids=@root.request.params.query.t type='query'}}
 </div>
 
 <script type="javascript/blocked" data-task="empty-collapse">
