--- a/configuration/templates/volunteering/task.hbs
+++ b/configuration/templates/volunteering/task.hbs
@@ -10,16 +10,16 @@
       </h2>
 
       {{!-- <div class="bg-warning x-padding"> --}}
-        <h4 class="no-margin">Checklist: What is volunteering?</h4>
+        <h4 class="no-margin">What is volunteering?</h4>
         <ul class="fa-ul">
           <li>
             <span class="fa-li"><span class="far fa-check-circle text-success"></span></span>
             <span class="text-grey">Volunteering is a choice to give time or energy, of one's own free will, and a choice not motivated for financial gain or for a wage or salary.</span>
           </li>
-          <li>
+          {{!-- <li>
             <span class="fa-li"><span class="far fa-times-circle text-error"></span></span>
             <span class="text-grey">Paid internships, etc. [Need improved text]</span>
-          </li>
+          </li> --}}
         </ul>
       {{!-- </div> --}}
 
