--- a/configuration/templates/volunteering/verify-hours-pass.hbs
+++ b/configuration/templates/volunteering/verify-hours-pass.hbs
@@ -1,9 +1,3 @@
 <div class="empty">
-  <div class="empty-icon text-success">
-    <span class="fal fa-user-check fa-3x"></span>
-  </div>
-  <p class="empty-title h5">Volunteering verification</p>
-  <p class="empty-subtitle">
-    Volunteering verification successful. You can now close this page.
-  </p>
+  {{> verify_pass task_ids=@root.request.params.query.t type='verify'}}
 </div>
