--- a/configuration/templates/volunteering/hours.hbs
+++ b/configuration/templates/volunteering/hours.hbs
@@ -255,7 +255,7 @@
                     {{/ifAny ~}}
                   </option>
                   {{else}}
-                  <option value="{{hours}}" {{#unless @root.data.accountInfo.summit_certificate_permission}}disabled{{/unless}}>
+                  <option value="{{hours}}"{{#unless @root.data.accountInfo.summit_certificate_permission}} disabled{{/unless}}>
                     {{type_name}}
                   </option>
                   {{/unless ~}}
@@ -350,6 +350,10 @@
                       {{else}}
                       {{type_name}}
                       {{/ifAny ~}}
+                    </option>
+                    {{else}}
+                    <option value="{{hours}}"{{#unless @root.data.accountInfo.summit_certificate_permission}} disabled{{/unless}}>
+                      {{type_name}}
                     </option>
                     {{/unless ~}}
                     {{/each ~}}
