*better* fix to link on sign up

--- a/configuration/partials/account/details-form-fields.hbs
+++ b/configuration/partials/account/details-form-fields.hbs
@@ -119,7 +119,7 @@
     <div class="form-group">
       <label class="form-checkbox">
         <input type="checkbox" required>
-        <span class="form-icon"></span> I accept the <a href="/terms">terms & conditions</a> for the {{@root.context.metaData.title}}
+        <span class="form-icon"></span> I accept the <a target="_blank" href="/terms">terms & conditions</a> for the {{@root.context.metaData.title}}
       </label>
     </div>
     <div class="form-group">
