--- a/configuration/templates/opportunities/map.hbs
+++ b/configuration/templates/opportunities/map.hbs
@@ -37,7 +37,7 @@
               latLng: { lat: {{@root.request.params.query.lat}}, lng: {{@root.request.params.query.lng}} },
               options: {
                 radius: {{default (multiply @root.request.params.query.distance 1609.34) 0}},
-                color: "#009DDA"
+                color: "#008EDF"
               }
             }
           ]
