--- a/src/main.scss
+++ b/src/main.scss
@@ -879,6 +879,7 @@ ul.fa-ul {
 
 .claim-code {
   padding: $unit/5 $unit/2 0;
+  text-transform: uppercase;
   margin-bottom: $unit/4;
   font-size: 95%;
   line-height: 2;
