--- a/configuration/templates/volunteering/hours-csv.hbs
+++ b/configuration/templates/volunteering/hours-csv.hbs
@@ -5,7 +5,7 @@
 "Name","Certificate","Claim code"
 {{#each hours_list ~}}
 {{#ifAny claim_first_name claim_code ~}}
-{{{stringify (concat claim_first_name ' ' claim_last_name)}}},{{#compare hours 0}}challenge{{else}}{{#compare hours 1}}summit{{else}}{{#compare hours "<" 50}}approach{{else}}ascent{{/compare}}-{{hours}}{{/compare}}{{/compare}},{{#ifAll claim_code (compare hours "!==" 0) (compare hours "!==" 1) ~}}{{substr claim_code 0 10}}{{/ifAll}}
+{{{stringify (concat claim_first_name ' ' claim_last_name)}}},{{#compare hours 0}}challenge{{else}}{{#compare hours 1}}summit{{else}}{{#compare hours "<" 50}}approach{{else}}ascent{{/compare}}-{{hours}}{{/compare}}{{/compare}},{{#ifAll claim_code (compare hours "!==" 0) (compare hours "!==" 1) ~}}{{uppercase (substr claim_code 0 10)}}{{/ifAll}}
 {{/ifAny ~}}
 {{/each ~}}
 {{/compare ~}}
